--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,15 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+# Configuracion del Pool de Conexiones (HikariCP) para Supabase
+spring.datasource.hikari.maximum-pool-size=5
+# Tiempo máximo de espera para una conexión del pool (30 segundos)
+spring.datasource.hikari.connection-timeout=30000
+# Tiempo máximo que una conexión puede estar inactiva en el pool (10 minutos)
+spring.datasource.hikari.idle-timeout=600000
+# Tiempo máximo de vida de una conexión en el pool (30 minutos)
+spring.datasource.hikari.max-lifetime=1800000
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
