CHORE: Unificar archivos .gitignore y .gitattributes en la raíz"

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-# Dependencias
-frontend/node_modules/
-
-# Archivos de compilación de TypeScript
-frontend/dist/
-
-# Archivos de entorno
-.env
-backend/.env
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Archivos de sistema operativo
-.DS_Store
-Thumbs.db
 # Logs
 logs
 *.log
@@ -26,15 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Frontend
+frontend/node_modules
+frontend/dist
+frontend/dist-ssr
+
+# Backend
+backend/target/
+
+# Maven
+.mvn/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
+*.iml
+*.ipr
+*.iws
 .DS_Store
 *.suo
 *.ntvs*
