--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
