--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.36.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
