feature/interface admin

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ambrosia
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres?user\=postgres.hpcyzziarnyslrysutfm&password\=Fresitaconleche123
+spring.datasource.username=postgres.hpcyzziarnyslrysutfm
+spring.datasource.password=Fresitaconleche123
 
 # Configuracion del Pool de Conexiones (HikariCP) para Supabase
 spring.datasource.hikari.maximum-pool-size=5
