--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=ambrosia
 
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres?user\=postgres.hpcyzziarnyslrysutfm&password\=Fresitaconleche123
-spring.datasource.username=postgres.hpcyzziarnyslrysutfm
-spring.datasource.password=Fresitaconleche123
-
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 # Configuracion del Pool de Conexiones (HikariCP) para Supabase
 spring.datasource.hikari.maximum-pool-size=5
 # Tiempo máximo de espera para una conexión del pool (30 segundos)
