--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ambrosia
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 # Configuracion del Pool de Conexiones (HikariCP) para Supabase
 spring.datasource.hikari.maximum-pool-size=5
 # Tiempo máximo de espera para una conexión del pool (30 segundos)
