--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
