--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ambrosia
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.hpcyzziarnyslrysutfm
+spring.datasource.password=Fresitaconleche123
 # Configuracion del Pool de Conexiones (HikariCP) para Supabase
 spring.datasource.hikari.maximum-pool-size=5
 # Tiempo máximo de espera para una conexión del pool (30 segundos)
