fix(testing): Arreglo de imports & models

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,3 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-jwt.secret=testsecretkeyforjwt
-jwt.expiration=3600000
+jwt.secret=aVeryLongAndSecureSecretKeyForTestingJWTpurposes
+jwt.expiration.ms=3600000
+file.upload-dir=uploads
+supabase.url=http://localhost:8000
+supabase.key=dummy-key
+supabase.service-role-key=dummy-service-role-key
+logging.level.org.springframework.security=DEBUG
