feat(docker): Actualizamiento de docker files

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,14 @@ backend/uploads/
 # Maven
 .mvn/
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Docker
+docker-compose.override.yml
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
