--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,29 @@
-# Usa una imagen base con Java 21 (o la versión que uses en tu proyecto)
-FROM openjdk:21-jdk-slim
-
-# Establece el directorio de trabajo dentro del contenedor
+# Etapa 1: Build
+FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
 
-# Copia el archivo JAR de tu aplicación al contenedor
-# Asegúrate de que el nombre del archivo JAR sea correcto
-COPY target/ambrosia-0.0.1-SNAPSHOT.jar app.jar
+# Copiar archivos de configuración de Maven
+COPY pom.xml .
+COPY src ./src
 
-# Expone el puerto en el que se ejecuta la aplicación Spring Boot
+# Compilar el proyecto (esto descargará las dependencias y compilará)
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Runtime
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+
+# Copiar el JAR compilado desde la etapa de build
+COPY --from=build /app/target/ambrosia-0.0.1-SNAPSHOT.jar app.jar
+
+# Crear directorio para uploads
+RUN mkdir -p /app/uploads
+
+# Exponer puerto
 EXPOSE 8080
+
+# Variables de entorno por defecto (pueden ser sobrescritas por docker-compose)
+ENV SPRING_PROFILES_ACTIVE=prod
 
 # Comando para ejecutar la aplicación
 ENTRYPOINT ["java", "-jar", "app.jar"]
