--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,30 +2,30 @@
 FROM node:20-alpine AS build
 
 # Establece el directorio de trabajo
-WORKDIR /app/frontend
+WORKDIR /app
 
 # Copia los archivos package.json y package-lock.json
 COPY package*.json ./
 
 # Instala las dependencias
-RUN npm install
+RUN npm ci
 
 # Copia el resto del código fuente del frontend
 COPY . .
 
-# Construye la aplicación React
+# Construye la aplicación para producción
 RUN npm run build
 
-# Etapa de servicio
+# Etapa de servicio con Nginx
 FROM nginx:alpine
 
-# Copia los archivos de configuración de Nginx (crearemos este archivo luego)
+# Copia configuración personalizada de Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copia los archivos estáticos construidos desde la etapa de construcción
-COPY --from=build /app/frontend/dist /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
-# Expone el puerto que Nginx usará para servir la aplicación
+# Expone el puerto 80
 EXPOSE 80
 
 # Comando para iniciar Nginx
