--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,22 +1,39 @@
 server {
     listen 80;
     server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
+    # Configuración para React Router (SPA)
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Configuración para el backend API (si se ejecuta en el mismo dominio/puerto con un proxy)
-    # Por ahora, asumimos que el backend está en un servicio separado accesible por su nombre de servicio en Docker Compose
-    # Si el frontend necesita comunicarse con el backend a través de Nginx, se configuraría aquí un proxy_pass.
-    # Ejemplo:
-    # location /api {
-    #     proxy_pass http://backend:8080;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+    # Proxy para el backend API
+    location /api/ {
+        proxy_pass http://backend:8080/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Configuración de caché para assets estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Configuración de seguridad
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
